apps/graphql/user/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jade-graphql-user
  namespace: grocery-dev
  labels:
    app: jade-graphql-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jade-graphql-user
  template:
    metadata:
      labels:
        app: jade-graphql-user
    spec:
      containers:
        - name: jade-graphql-user
          image: harbor.instg.pscloudhub.com/iris/jade-graphql-user:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /.well-known/apollo/server-health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /.well-known/apollo/server-health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 60
