apps/graphql/user/k8s/services.yaml
kind: Service
apiVersion: v1
metadata:
  name: jade-graphql-user
  namespace: grocery-dev
  labels:
    app: jade-graphql-user
spec:
  type: ClusterIP
  selector:
    app: jade-graphql-user
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: jade-graphql-user
